--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,11 @@ a {
     color: #4c4d4f;
     text-decoration: none;
 }
+.top-page {
+    max-width: 1920px;
+    margin-right: auto;
+    margin-left: auto;
+}
 /* header */
 .header,
 .header-sp {
@@ -49,7 +54,7 @@ a {
     justify-content: space-between;
     align-items: center;
     padding: 16px 18px;
-    background-color: rgba(255, 2555, 255, 0.9);
+    background-color: rgba(255, 2555, 255, 0.7);
     color: #2e2e2e;
     font-weight: bold;
     border-bottom: 1px solid lightgray;
@@ -87,7 +92,7 @@ a {
 }
 .ham-main-menu-item,
 .ham-main-menu-item-only {
-    padding: 10px 20px;
+    padding: 16px 20px;
     display:flex;
     justify-content:space-between;
     border-bottom: 1px solid white;
@@ -99,7 +104,7 @@ a {
     opacity: 60%;
 }
 .ham-sub-menu-item {
-    padding: 10px 20px;
+    padding: 16px 20px;
     display:flex;
     justify-content:space-between;
     align-items: center;
@@ -139,6 +144,26 @@ a {
 }
 
 /* top */
+.top-slide .metaslider .slides img {
+    min-height: 600px;
+    object-fit: cover;
+    object-position: right;
+}
+.top-slide {
+    position: relative;
+}
+.top-description {
+    font-family: "Noto Serif JP";
+    position: absolute;
+    top: 240px;
+    left: 330px
+}
+.top-description-main {
+    font-size: 32px;
+}
+.top-description-sub {
+    font-size: 24px;
+}
 .top-section-wrapper {
     padding: 120px 0px;
     margin-right: auto;
@@ -146,14 +171,11 @@ a {
     max-width: 1240px;
     border-top: 1px solid gray;  
 }
-.top-section-wrapper:first-child {
-    border: none;
-}
-.top-section-titie {
+.top-section-title {
     border-left: 3px solid #eb6101;
     padding-left: 16px;
 }
-.top-section-titie {
+.top-section-title {
     font-family: "Noto Serif JP";
 }
 .top-section-description {
@@ -163,10 +185,16 @@ a {
     display: grid; /* Changed to grid since grid-template-columns is used */
     grid-template-columns: auto auto auto;
     gap: 30px;
+    justify-content: flex-start;
 }
 .top-section-img {
     width: 100%;
-    height: auto;
+    height: 245px;
+    object-fit: cover;
+    object-position: center;
+}
+.special img {
+    max-width: 392px;
 }
 .top-section-rental-viewer {
     display: grid;
@@ -176,8 +204,9 @@ a {
 }
 .top-section-rental-img {
     width: 100%;
-    height: 100%;
-    max-height: 240px;
+    height: 200px;
+    object-fit: cover;
+    object-position: center;
 }
 .top-section-phone {
     font-family: "Kaisei Haruno Umi";
@@ -252,6 +281,36 @@ a {
     margin-left: auto;
     max-width: 1020px;
 }
+.carousel-mode {
+    max-width: 1240px;
+}
+.metaslider.ms-theme-clarity .flexslider {
+    margin-bottom: 0px !important;
+}
+.carousel-mode .metaslider.ms-theme-clarity .flexslider .caption-wrap {
+    background: #F9F8F4 !important;
+    border: none !important;
+}
+.carousel-mode .metaslider.ms-theme-clarity .flexslider .caption-wrap .caption {
+    padding: 10px 0px !important;
+}
+.carousel-mode .metaslider.ms-theme-clarity .flexslider .flex-direction-nav li a {
+    width: 40px !important;
+    height: 40px !important;
+    background-color: transparent !important;
+    border: none !important;
+    box-shadow: 0px 0px 0px 0px !important
+}
+.metaslider.ms-theme-clarity .flexslider .flex-direction-nav li a.flex-next {
+    right: -45px !important;
+}
+.metaslider.ms-theme-clarity .flexslider .flex-direction-nav li a.flex-prev {
+    left: -45px !important;
+}
+.metaslider.ms-theme-clarity .flexslider .slides li {
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
 .grid-two-column {
     margin-top: 100px;
     display: grid;
@@ -305,7 +364,7 @@ a {
     gap: 70px;
 }
 
-/* grouphome fukuoka */
+/* grouphome */
 .bg-image-center {
     background-repeat: no-repeat;
     background-position: center;
@@ -314,6 +373,66 @@ a {
     height: 100%;
     min-height: 200px;
 }
+
+/* dayservice */
+.grid-two-column-3 {
+    display: grid;
+    grid-template-columns: 65% calc(35% - 20px);
+    justify-content: center;
+    gap: 20px;
+}
+.dayservice-section-title {
+    border-left: 3px solid #ec6d56;
+    padding-left: 16px;
+}
+.dayservice-section-title {
+    font-family: "Noto Serif JP";
+}
+.dayservice-section-description {
+    font-family: "Noto Serif JP";
+}
+.grid-column-4 {
+    display: grid;
+    grid-template-columns: repeat(3, calc((100% - 60px) / 3));
+    justify-content: center;
+    gap: 30px;
+}
+.grid-column-4 img {
+    width: 100%;
+    min-height: 245px;
+    object-fit: cover;
+}
+.circle-image-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    height: calc(50vw + 60px);
+    max-height: 700px;
+    margin-bottom: 60px;
+}
+.circle-image {
+    width: 25vw;
+    height: 25vw;
+    max-width: 320px;
+    max-height: 320px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+.dayservice-section-area {
+    width: 100%;
+    border-radius: 24px;
+    border: 1px solid #ec6d56;
+    padding: 40px 0px;
+    text-align: center;
+    background: #FFFFFF;
+}
+.dayservice-section-area p {
+    padding-right: 150px;
+    padding-left: 150px;
+    line-height: 2;
+}
+
 /* recruit */
 .section-title-bar {
     height: 200px;
@@ -418,6 +537,11 @@ a {
 .footer-scroll-top-btn:hover {
     opacity: 60%;
 }
+@media screen and (max-width: 1920px) {
+    .top-description {
+        left: 18vw;
+    }
+}
 @media screen and (max-width: 1400px) {
     .header {
         display: none !important;
@@ -427,6 +551,16 @@ a {
     }
     .header-sp-phone {
         display: block;
+    }
+    .top-description {
+        left: 10vw;
+        top: 100px;
+    }
+    .top-description-main {
+        font-size: 24px;
+    }
+    .top-description-sub {
+        font-size: 18px;
     }
     .top-section-wrapper {
         max-width: 80vw;
@@ -448,19 +582,16 @@ a {
     .menu-text-item {
         border-left: none
     }
-    .grid-two-column {
-        padding: 0px 5%;
-        grid-template-columns: repeat(2, 45%);
+    .sancare-section-wrapper {
+        padding-left: 5%;
+        padding-right: 5%;
     }
-    .service-btns {
-        padding: 0px 5%;
+    .grid-column-4 {
+        grid-template-columns: auto auto 
     }
-    .google-map {
-        padding: 0px 5%;
-    }
-    .grid-two-column-2 {
-        padding: 0px 5%;
-        grid-template-columns: 30% calc(65% - 70px);
+    .dayservice-section-area p {
+        padding-right: 50px;
+        padding-left: 50px;
     }
 }
 @media screen and (max-width: 768px) {
@@ -478,6 +609,14 @@ a {
     }
     .log-img {
         width: 240px;
+    }
+    .top-slide {
+       margin-top: 70px;
+    }
+    .top-description {
+        left: 0;
+        top: 100px;
+        padding:0 5%;
     }
     .top-section-wrapper {
         max-width: 90vw;
@@ -509,14 +648,43 @@ a {
     .grid-two-column {
         grid-template-columns: auto;
     }
-    .service-btns {
-        padding: 0px 5%;
-    }
     .service-btns-wrapper {
         grid-template-columns: auto auto;
     }
     .grid-two-column-2 {
-        padding: 0px 5%;
         grid-template-columns: auto;
+    }
+    .grid-two-column-3 {
+        grid-template-columns: auto;
+    }
+    .grid-column-4 {
+        grid-template-columns: auto; 
+    }
+    .facility-info-description {
+        display: block !important
+    }
+    .dayservice-section-area p {
+        padding-right: 20px;
+        padding-left: 20px;
+    }
+    .circle-image-wrapper {
+        height: 700px;
+    }
+    .circle-image {
+        width: 320px;
+        height: 320px;
+    }
+    .special img {
+        max-width: none;
+    }
+    .carousel-mode .metaslider.ms-theme-clarity .flexslider .flex-direction-nav li a {
+        width: 20px !important;
+        height: 40px !important;
+    }
+    .metaslider.ms-theme-clarity .flexslider .flex-direction-nav li a.flex-next {
+        right: -25px !important;
+    }
+    .metaslider.ms-theme-clarity .flexslider .flex-direction-nav li a.flex-prev {
+        left: -25px !important;
     }
 }
