--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,41 +1,56 @@
+h3 {
+    line-height: 1.8;
+}
 .font12 {
     font-size: 12px;
+    line-height: 1.8;
 }
 .font13 {
     font-size: 13px;
+    line-height: 1.8;
 }
 .font14 {
     font-size: 14px;
+    line-height: 1.8;
 }
 .font15 {
     font-size: 15px;
+    line-height: 1.8;
 }
 .font16 {
     font-size: 1rem;
+    line-height: 1.8;
 }
 .font18 {
     font-size: 18px;
+    line-height: 1.8;
 }
 .font20 {
     font-size: 20px;
+    line-height: 1.8;
 }
 .font25 {
     font-size: 25px;
+    line-height: 1.8;
 }
 .font28 {
     font-size: 28px;
+    line-height: 1.8;
 }
 .font31 {
     font-size: 30px;
+    line-height: 1.8;
 }
 .font32 {
     font-size: 32px;
+    line-height: 1.8;
 }
 .font40 {
     font-size: 40px;
+    line-height: 1.8;
 }
-.line2 {
-    line-height: 2;
+.no-border {
+    border: unset !important;
 }
 .bold {
     font-weight: 700 !important;
