--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,9 @@ a {
     color: #4c4d4f;
     text-decoration: none;
 }
-
+hr {
+    margin: 2px 0;
+}
 th {
     background-color: #DCDDDE;
 }
@@ -186,7 +188,6 @@ th {
 }
 .top-section-img {
     width: 100%;
-    height: 227px;
     object-fit: cover;
     object-position: center;
 }
@@ -347,10 +348,14 @@ th {
     grid-template-columns: repeat(2, calc((100% - 70px) / 2));
     justify-content: center;
     align-items: center;
-    gap: 70px;
+    column-gap: 70px;
+    row-gap: 40px;
 }
 .grid-two-column img {
     width: 100%;
+}
+.bottom-grid {
+    column-gap: 40px !important;
 }
 .service-btns-wrapper {
     display: grid;
@@ -387,13 +392,14 @@ th {
 }
 .google-map {
     height: 70vw;
-    max-height: 700px;
+    max-height: 650px;
 }
 .grid-two-column-2 {
     display: grid;
     grid-template-columns: 35% calc(65% - 70px);
     justify-content: center;
-    gap: 70px;
+    column-gap: 70px;
+    row-gap: 35px;
 }
 
 /* grouphome */
@@ -407,14 +413,26 @@ th {
 }
 
 /* dayservice */
-.grid-two-column-3 {
+.grid-two-column-5 {
     display: grid;
     grid-template-columns: 65% calc(35% - 50px);
-    justify-content: center;
-    gap: 50px;
+    gap: 30px;
     max-width: 1000px;
     margin-left: auto;
     margin-right: auto;
+}
+.grid-two-column-3 {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 30px;
+    max-width: 1000px;
+    margin-left: auto;
+    margin-right: auto;
+}
+.grid-two-column-3 img {
+    max-width: 392px;
+    width: 100%;
 }
 .dayservice-section-title {
     border-left: 3px solid #ec6d56;
@@ -454,23 +472,6 @@ th {
     border-radius: 50%;
     object-fit: cover;
 }
-.dayservice-section-area {
-    width: 100%;
-    max-width: 1120px;
-    border-radius: 24px;
-    border: 1px solid #ec6d56;
-    padding: 40px 0px;
-    text-align: center;
-    background: #FFFFFF;
-    margin-left: auto;
-    margin-right: auto;
-}
-.dayservice-section-area p {
-    padding-right: 150px;
-    padding-left: 150px;
-    line-height: 2;
-}
-
 /* expenses */
 .expenses-table-title {
     padding: 5px 15px;
@@ -733,10 +734,6 @@ table {
         padding-left: 5%;
         padding-right: 5%;
     }
-    .dayservice-section-area p {
-        padding-right: 50px;
-        padding-left: 50px;
-    }
 }
 @media screen and (max-width: 768px) {
     .header,
@@ -786,6 +783,7 @@ table {
     .grid-two-column,
     .grid-two-column-2,
     .grid-two-column-3,
+    .grid-two-column-5,
     .grid-column-4 {
         display: flex;
         flex-direction: column;
@@ -793,7 +791,11 @@ table {
 
     .grid-two-column {
         margin-top: 50px;
-        gap: 30px;
+    }
+
+    .grid-two-column-3 img {
+        max-width: unset;
+        width: 100%;
     }
 
     .column-reverse {
@@ -806,10 +808,6 @@ table {
     }
     .facility-info-description {
         display: block !important
-    }
-    .dayservice-section-area p {
-        padding-right: 20px;
-        padding-left: 20px;
     }
     .circle-image-wrapper {
         height: 700px;
@@ -860,7 +858,6 @@ table {
         font-size: 14px;
     }
     .top-section-img {
-        max-height: 245px;
         width: 90vw;
     }
     .footer-fixed-button {
