--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@
     margin-top: 0px !important;
 }
 body {
-    font-family: "Noto Sans JP";
+    font-family: "Source Han Sans JP";
     font-size: 14px !important;
     color: #4c4d4f !important;
     margin: auto;
@@ -126,6 +126,7 @@ th {
     user-select: none;
     position: relative;
     z-index: 200;
+    font-family: "Source Han Sans JP M";
 }
 .menu-text-item:hover {
     color: #eb6101;
@@ -156,7 +157,7 @@ th {
     object-position: 75%;
 }
 .top-description {
-    font-family: "Noto Serif JP";
+    font-family: "游明朝体 Pr6N M";
     position: absolute;
     top: 33%;
     left: 330px;
@@ -165,24 +166,22 @@ th {
     line-height: 2;
 }
 .top-section-wrapper {
-    padding: 120px 0px;
+    padding: 80px 0px;
     margin-right: auto;
     margin-left: auto;
-    max-width: 1080px;
+    max-width: 1320px;
 }
 .top-section-title {
     border-left: 3px solid #eb6101;
     padding-left: 16px;
+    font-family: "游明朝体 Pr6N";
 }
-.top-section-title {
-    font-family: "Noto Serif JP";
-}
-.top-section-description {
-    font-family: "Noto Serif JP";
+.top-section-main-addresss {
+    font-family: "游明朝体 Pr6N";
 }
 .top-section-viewer {
     display: grid; /* Changed to grid since grid-template-columns is used */
-    grid-template-columns: auto auto auto;
+    grid-template-columns: repeat(3, calc((100% - 60px) / 3));
     gap: 30px;
     justify-content: flex-start;
 }
@@ -192,18 +191,7 @@ th {
     object-position: center;
 }
 .special img {
-    max-width: 340px
-}
-.top-section-rental-viewer {
-    display: grid;
-    grid-template-columns: auto auto auto auto;
-    gap: 30px;
-}
-.top-section-rental-img {
-    width: 100%;
-    height: 174px;
-    object-fit: cover;
-    object-position: center;
+    max-width: 420px;
 }
 .top-section-phone {
     font-family: "Kaisei Haruno Umi";
@@ -219,7 +207,7 @@ th {
 /* company */
 .section-wrapper {
     max-width: 820px;
-    padding-top: 100px;
+    padding-top: 80px;
     padding-left: 20px;
     padding-right: 20px;
     margin-right: auto;
@@ -245,7 +233,6 @@ th {
 .environment-item-label {
     display: flex;
     padding-bottom: 15px;
-    font-family: "Noto Sans JP";
     border-bottom: 2px solid lightgray;
 }
 /* san-care */
@@ -281,7 +268,10 @@ th {
     color: #eeefef;
 }
 .section-big-title-bar h1 {
-    font-family: "Noto Serif JP";
+    font-family: "游明朝体 Pr6N";
+}
+.section-big-title-bar h6 {
+    font-family: "Source Han Sans JP M";
 }
 .sancare-top-img {
     margin-top: -150px;
@@ -301,7 +291,7 @@ th {
     border-radius: 50px;
 }
 .sancare-section-wrapper {
-    padding: 100px 0px;
+    padding: 80px 0px;
     margin-right: auto;
     margin-left: auto;
     max-width: 1020px;
@@ -322,7 +312,7 @@ th {
     background: #F9F8F4 !important;
     padding: 10px 0px !important;
     color: #4c4d4f !important;
-    font-family: "Noto Sans JP" !important;
+    font-family: "Source Han Sans JP" !important;
 }
 .carousel-mode .metaslider.ms-theme-clarity .flexslider .flex-direction-nav li a {
     width: 40px !important;
@@ -343,7 +333,7 @@ th {
     margin-bottom: 0px;
 }
 .grid-two-column {
-    margin-top: 100px;
+    margin-top: 80px;
     display: grid;
     grid-template-columns: repeat(2, calc((100% - 70px) / 2));
     justify-content: center;
@@ -439,10 +429,10 @@ th {
     padding-left: 16px;
 }
 .dayservice-section-title {
-    font-family: "Noto Serif JP";
+    font-family: "游明朝体 Pr6N";
 }
 .dayservice-section-description {
-    font-family: "Noto Serif JP";
+    font-family: "游明朝体 Pr6N";
 }
 .grid-column-4 {
     display: grid;
@@ -473,6 +463,35 @@ th {
     object-fit: cover;
 }
 /* expenses */
+.expenses-box {
+    max-width: 820px;
+    margin-left: auto;
+    margin-right: auto;
+}
+.expenses-box .top-section-title {
+    border-color: #8a392a;
+}
+.plan-title {
+    color: white;
+    background-color: #8a392a;
+    padding: 10px 30px;
+    margin-right: 10px;
+}
+.plan-price {
+    display: flex;
+    align-items: baseline;
+}
+.plan-row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 15px;
+}
+.expenses-title {
+    font-size: 22px;
+    padding-bottom: 10px;
+    border-bottom: 1px solid gray;
+}
 .expenses-table-title {
     padding: 5px 15px;
     font-size: 16px;
@@ -548,16 +567,16 @@ th {
     height: 200px;
     text-align: center;
     padding: 50px;
-    font-family: "Noto Serif JP";
+    font-family: "游明朝体 Pr6N";
     color: #eeefef;
 }
 .recruit-description {
     max-width: 820px;
-    padding: 100px 20px 100px 20px;
+    padding: 80px 20px;
     text-align: center;
 }
 .recruit-description h2 {
-    font-family: "Noto Serif JP";
+    font-family: "游明朝体 Pr6N";
 }
 .work-environment-btn {
     height: 50px;
@@ -697,7 +716,7 @@ table {
     }
     .top-description {
         left: 10vw;
-        top: 100px;
+        top: 80px;
         font-size: 24px;
     }
     .top-section-wrapper {
@@ -709,9 +728,8 @@ table {
     .special img {
         max-width: unset;
     }
-    .top-section-viewer,
-    .top-section-rental-viewer {
-        grid-template-columns: auto auto;
+    .top-section-viewer {
+        grid-template-columns: repeat(2, calc((100% - 20px) / 2));
         gap: 20px;
     }
     .grid-column-4 {
@@ -734,6 +752,9 @@ table {
         padding-left: 5%;
         padding-right: 5%;
     }
+    .expenses-box {
+        padding: 0px 3%;
+    }
 }
 @media screen and (max-width: 768px) {
     .header,
@@ -755,13 +776,12 @@ table {
     .top-section-wrapper {
         max-width: 90vw;
     }
-    .top-section-viewer,
-    .top-section-rental-viewer {
+    .top-section-viewer {
         grid-template-columns: auto;
         gap: 20px;
     }
     .footer {
-        margin-bottom: 100px;
+        margin-bottom: 80px;
     }
     .footer-menu-items {
         display: grid;
@@ -878,12 +898,22 @@ table {
     .footer-fixed-buttons {
         bottom: 20px;
     }
+    .plan-row {
+        align-items: start;
+        flex-direction: column;
+    }
+}
+
+@media screen and (max-width: 520px) {
+    .plan-price {
+        flex-direction: column;
+    }
 }
 
 /* Form */
 .form-desc {
     font-size: 16px;
-    font-family: "Noto Sans JP";
+    font-family: "Source Han Sans JP";
     margin-bottom: 50px;
 }
 .form-row {
@@ -913,14 +943,14 @@ table {
     background-color: red;
     padding: 2px 10px;
     font-size: 12px;
-    font-family: "Noto Sans JP";
+    font-family: "Source Han Sans JP";
     margin-left: 15px;
 }
 
 .form-label {
     width: 100%;
     font-size: 13px;
-    font-family: "Noto Sans JP";
+    font-family: "Source Han Sans JP";
     padding: 10px;
     display: flex;
     align-items: center;
@@ -931,7 +961,7 @@ table {
 .form-address-label {
     width: 100%;
     font-size: 13px;
-    font-family: "Noto Sans JP";
+    font-family: "Source Han Sans JP";
     padding-bottom: 10px;
     font-weight: 700;
     display: flex;
@@ -951,7 +981,7 @@ table {
     line-height: 50px;
     font-size: 14px;
     padding: 10px;
-    font-family: "Noto Sans JP";
+    font-family: "Source Han Sans JP";
 }
 .form-input-wrapper {
     margin-bottom: 20px;
@@ -966,7 +996,7 @@ table {
     line-height: 35px;
     font-size: 13px;
     padding: 5px 10px;
-    font-family: "Noto Sans JP";    
+    font-family: "Source Han Sans JP";    
 }
 .form-input-sm-wrapper {
     margin-bottom: 20px;
@@ -1009,7 +1039,7 @@ table {
     width: 100%;
     padding: 15px;
     font-size: 13px;
-    font-family: "Noto Sans JP";
+    font-family: "Source Han Sans JP";
 }
 .form-radio-wrapper {
     padding: 15px;
@@ -1042,7 +1072,7 @@ table {
     color: white;
     font-size: 18px;
     padding: 15px;
-    margin-top: 100px;
+    margin-top: 80px;
     margin-bottom: 40px;
 }
 .width-fit input {
