--- a/style.css
+++ b/style.css
@@ -29,6 +29,31 @@ Text Domain: sun-care
 }
 
 @font-face {
+  font-family: "Source Han Sans JP";
+  src: url('./assets/font/SourceHanSansJP-Normal.otf');
+}
+
+@font-face {
+  font-family: "Source Han Sans JP M";
+  src: url('./assets/font/SourceHanSansJP-Medium.ttf');
+}
+
+@font-face {
+  font-family: "游明朝体 Pr6N";
+  src: url('./assets/font/YuMinPr6N.ttf');
+}
+
+@font-face {
+  font-family: "游明朝体 Pr6N M";
+  src: url('./assets/font/YuMinPr6N-Medium.ttf');
+}
+
+@font-face {
+  font-family: "Garamond";
+  src: url('./assets/font/Garamond.ttf');
+}
+
+@font-face {
   font-family: "Noto Serif JP";
   src: url('./assets/font/NotoSerifJP-Regular.ttf');
 }
