--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,7 +57,6 @@ th {
     padding: 16px 18px;
     background-color: rgba(255, 2555, 255, 0.7);
     color: #2e2e2e;
-    font-weight: bold;
     border-bottom: 1px solid lightgray;
 }
 .menu-text-item-menu-item:hover {
@@ -559,7 +558,7 @@ th {
     border-bottom: 1px solid gray;
     margin-bottom: 30px;
     font-size: 18px;
-    font-weight: 700;
+    font-weight: 500;
     padding-bottom: 10px;
 }
 /* recruit */
@@ -955,7 +954,6 @@ table {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    font-weight: 700;
     margin-bottom: 20px;
 }
 .form-address-label {
@@ -963,7 +961,6 @@ table {
     font-size: 13px;
     font-family: "Source Han Sans JP";
     padding-bottom: 10px;
-    font-weight: 700;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -1139,7 +1136,7 @@ table {
     right: 10px;
     color: white;
     font-size: 22px;
-    font-weight: 700;
+    font-weight: 500;
     cursor: pointer;
 }
 
@@ -1155,7 +1152,7 @@ table {
     right: 35px;
     color: white;
     font-size: 16px;
-    font-weight: 700;
+    font-weight: 500;
     cursor: pointer;
 }
 /* Button to open the modal */
@@ -1171,4 +1168,9 @@ table {
 
 .open-modal-button:hover {
     background-color: #0056b3;
+}
+
+select,
+option {
+    color: #4c4d4f !important;
 }
