--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,54 +1,67 @@
 .font12 {
     font-size: clamp(11px, 2.2vw, 12px);
-    line-height: 1.5;
+    line-height: 1.8;
+    letter-spacing: 0.03em;
 }
 .font13 {
     font-size: clamp(12px, 2.4vw, 13px);
-    line-height: 1.5;
+    line-height: 1.8;
+    letter-spacing: 0.03em;
 }
 .font14 {
     font-size: clamp(13px, 2.6vw, 14px);
-    line-height: 1.8;
+    line-height: 2.0;
+    letter-spacing: 0.03em;
 }
 .font15 {
     font-size: clamp(14px, 2.8vw, 15px);
-    line-height: 1.8;
+    line-height: 2.0;
+    letter-spacing: 0.03em;
 }
 .font16 {
-    font-size: clamp(15px, 3vw, 16px);
-    line-height: 1.8;
+    font-size: clamp(14px, 2.8vw, 16px);
+    line-height: 2.0;
+    letter-spacing: 0.03em;
 }
 .font18 {
-    font-size: clamp(16px, 3.2vw, 18px);
-    line-height: 1.5;
+    font-size: clamp(15px, 3vw, 18px);
+    line-height: 1.8;
+    letter-spacing: 0.03em;
 }
 .font20 {
-    font-size: clamp(18px, 3.6vw, 20px);
-    line-height: 1.5;
+    font-size: clamp(17px, 3.6vw, 20px);
+    line-height: 1.8;
+    letter-spacing: 0.03em;
 }
 .font22 {
-    font-size: clamp(20px, 4vw, 22px);;
-    line-height: 1.5;
+    font-size: clamp(19px, 3.8vw, 22px);
+    line-height: 1.8;
+    letter-spacing: 0.03em;
 }
 .font25 {
-    font-size: 25px;
-    line-height: 1.5;
+    font-size: clamp(21px, 4.2vw, 25px);;
+    line-height: 1.8;
+    letter-spacing: 0.03em;
 }
 .font28 {
     font-size: clamp(22px, 4.4vw, 28px);
-    line-height: 1.5;
+    line-height: 1.8;
+    letter-spacing: 0.03em;
 }
 .font31 {
-    font-size: clamp(28px, 5.6vw, 31px);;
-    line-height: 1.5;
+    font-size: clamp(28px, 5.6vw, 31px);
+    line-height: 1.8;
+    letter-spacing: 4px;
 }
 .font32 {
     font-size: 32px;
-    line-height: 1.5;
+    line-height: 1.8;
+    letter-spacing: 0.03em;
 }
 .font40 {
     font-size: 40px;
-    line-height: 1.5;
+    line-height: 1.8;
+    letter-spacing: 0.03em;
 }
 .no-border {
     border: unset !important;
@@ -62,9 +75,18 @@
 .font-SourceHanSansJP-M {
     font-family: "Source Han Sans JP M";
 }
+.bold {
+    font-weight: 700;
+}
+.ml-- {
+    margin-left: -0.65rem;
+}
 .my-30 {
     margin-top: 30px;
     margin-bottom: 30px;
+}
+.mt-40 {
+    margin-top: 40px;
 }
 .pb-80 {
     padding-bottom: 80px;
