--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,7 +88,11 @@ th {
     position: fixed;
     top:20;
     right:0;
-    z-index: 9200;
+    z-index: 9300;
+    width: 100%;
+    max-width: 768px;
+    overflow-y: auto;
+    
 }
 .ham-main-menu-item,
 .ham-main-menu-item-only {
@@ -152,6 +156,7 @@ th {
     width: 100%;
     height: calc(100vh - 90px);
     max-height: 2000px;
+    min-height: 740px;
     object-fit: cover;
     object-position: 75%;
 }
@@ -194,6 +199,13 @@ th {
 }
 .top-section-phone {
     font-family: "Kaisei Haruno Umi";
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
+    i {
+        margin-top: 5px;
+    }
 }
 .phone-icon-2 {
     height: 24px;
@@ -296,7 +308,7 @@ th {
     max-width: 1020px;
 }
 .carousel-mode {
-    max-width: 1080px;
+    max-width: 1240px;
     padding-top: 60px;
     padding-bottom: 30px;
 }
@@ -405,7 +417,7 @@ th {
 .grid-two-column-5 {
     display: grid;
     grid-template-columns: 65% calc(35% - 50px);
-    gap: 30px;
+    gap: 50px;
     max-width: 1000px;
     margin-left: auto;
     margin-right: auto;
@@ -473,8 +485,9 @@ th {
 .plan-title {
     color: white;
     background-color: #8a392a;
-    padding: 10px 30px;
+    padding: 8px 38px;
     margin-right: 10px;
+    font-size: 18px;
 }
 .plan-price {
     display: flex;
@@ -484,12 +497,13 @@ th {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 15px;
+    margin-bottom: 8px;
 }
 .expenses-title {
-    font-size: 22px;
-    padding-bottom: 10px;
-    border-bottom: 1px solid gray;
+    font-size: clamp(18px, 3.6vw, 22px);
+    padding-bottom: 8px;
+    border-bottom: 1px solid lightgray;
+    letter-spacing: -1px;
 }
 .expenses-table-title {
     padding: 5px 15px;
@@ -702,7 +716,13 @@ table {
     .menu-text-item-menu {
         padding-top: 30px;
     }
-} 
+}
+@media screen and (max-width: 1400px) {
+    .sancare-section-wrapper {
+        padding-left: 5%;
+        padding-right: 5%;
+    }
+}
 @media screen and (max-width: 1270px) {
     .header {
         display: none !important;
@@ -715,7 +735,7 @@ table {
     }
     .top-description {
         left: 10vw;
-        top: 80px;
+        top: 140px;
         font-size: 24px;
     }
     .top-section-wrapper {
@@ -747,10 +767,6 @@ table {
     .footer-menu-items .menu-text-item-wrapper {
         border-left: none
     }
-    .sancare-section-wrapper {
-        padding-left: 5%;
-        padding-right: 5%;
-    }
     .expenses-box {
         padding: 0px 3%;
     }
@@ -768,7 +784,7 @@ table {
     }
     .top-description {
         left: 0;
-        top: 40px;
+        top: 165px;
         padding:0 5%;
         font-size: clamp(17px, 4.5vw, 22px);
     }
@@ -936,7 +952,9 @@ table {
     padding: 15px;
     margin-bottom: 20px;
 }
-
+.form-address .mwform-radio-field input {
+    width: fit-content;
+}
 .need-mark {
     color: white;
     background-color: red;
@@ -981,6 +999,9 @@ table {
     font-family: "Source Han Sans JP";
 }
 .form-input-wrapper {
+    display: grid;
+    grid-template-columns: auto;
+    align-items: center;
     margin-bottom: 20px;
 }
 .form-postal .form-sm-input {
@@ -996,6 +1017,9 @@ table {
     font-family: "Source Han Sans JP";    
 }
 .form-input-sm-wrapper {
+    display: grid;
+    grid-template-columns: auto;
+    align-items: center;
     margin-bottom: 20px;
 }
 .form-policy {
@@ -1082,6 +1106,13 @@ table {
     font-size: 18px;
     z-index: 1;
 }
+.confirm .need-mark {
+   display: none;
+}
+.confirm .form-radio-wrapper {
+    border: unset;
+    padding-left: unset;
+}
 @media screen and (max-width: 768px) {
     .form-row {
         grid-template-columns: auto;
@@ -1097,7 +1128,7 @@ table {
         grid-template-columns: auto
     }
     .form-sub-row .form-input-sm-wrapper {
-        margin-top: 0px;
+        margin-top: -2px;
     }
     .form-address-label {
         margin-bottom: 0px;
@@ -1106,8 +1137,10 @@ table {
     .form-postal {
         margin-bottom: 20px !important;
     }
+    .mw_wp_form {
+        min-width: unset;
+    }
 }
-
 .modal {
     display: none; /* Hidden by default */
     position: fixed;
